atualizacao v0.7
