# projetoII_biblioteca/src/controller/LivroController.ts
@@ -1,74 +1,100 @@
-/*import { Request, Response } from "express";
 import { LivroService } from "../service/LivroService";
+import { Route, Tags, Post, Body, Res, TsoaResponse, Controller, Put, Delete, Get, Path, Query} from "tsoa";
+import { BasicResponseDto } from "../model/dto/BasicResponseDto";
+import { LivroRequestDto} from "../model/dto/LivroDTO/LivroRequestDto";
+import { LivroDto } from "../model/dto/LivroDTO/LivroDto";
+import { Livro } from "../model/entity/Livro";
 
-const livroService = new LivroService();
 
-export async function cadastrarLivro (req: Request, res: Response){
-    try {
-        const novoLivro = await livroService.cadastrarLivro(req.body);
-        res.status(201).json(
-            {
-                mensagem:"Livro adicionado com sucesso!",
-                livro:novoLivro
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+
+@Route("livro")
+@Tags("Livro")
+export class LivroController extends Controller{
+    serviceLivro = new LivroService();
+
+    @Post()
+    async cadastrarLivro(
+        @Body() dto: LivroRequestDto,
+        @Res() fail: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<201, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            console.log("TRY DO CONTROLLER", dto);
+            const product = await this.serviceLivro.cadastrarLivro(dto);
+            return success(201, new BasicResponseDto("Livro criado com sucesso!", product));
+        } catch (error: any) {
+            return fail(400, new BasicResponseDto(error.message, undefined));
+        }
     }
-};
-
-export async function atualizarLivro (req: Request, res: Response){
-    try {
-        const livro = await livroService.atualizarLivro(req.body);
-        res.status(200).json(
-            {
-                mensagem:"Livro atualizado com sucesso!",
-                livro:livro
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+ 
+    @Put()
+    async atualizarLivro(
+        @Body() dto: LivroDto,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            console.log("TRY DO CONTROLLER ATT", dto);
+            const livro = await this.serviceLivro.atualizarLivro(dto);
+            return success(200, new BasicResponseDto("Livro atualizado com sucesso!", livro));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
     }
-};
 
-export async function deletarLivro (req: Request, res: Response){
-    try {
-        const livro = await livroService.deletarLivro(req.body);
-        res.status(200).json(
-            {
-                mensagem:"Livro deletado com sucesso!",
-                livro:livro
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+    @Delete()
+    async deletarLivro (
+        @Body() dto: LivroDto,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const livro = await this.serviceLivro.deletarLivro(dto);
+            return success(200, new BasicResponseDto("Livro deletado com sucesso!", livro));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
     }
-};
+    @Get("id/{id}")
+    async filtrarLivroPorId(
+        @Path() id: number,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const livro = await this.serviceLivro.buscaLivroPorID(id);
+            return success(200, new BasicResponseDto("Livro encontrado!", livro));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
+    }
 
-export async function filtrarLivro (req: Request, res: Response){
-    try {
-        const livro = await livroService.filtrarLivro(req.query.id);
-        res.status(200).json(
-            {
-                mensagem:"Livro encontrado com sucesso!",
-                livro:livro
-            }
-        );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
-    }
-};
+    @Get("nome")
+    async filtrarLivroPorNome(
+        @Query() titulo: string,
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const livro = await this.serviceLivro.buscaLivroPorTitulo(titulo);
+            return success(200, new BasicResponseDto("Livro encontrado!", livro));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
 
-export async function listarTodosLivro (req: Request, res: Response){
-    try {
-        const livros = await livroService.listarTodosLivros();
-        res.status(200).json(
-            {
-                mensagem:"Livros listados com sucesso!",
-                livros:livros
-            }
-            );
-    } catch (error: any) {
-        res.status(400).json({ message: error.message});
+        }
     }
-};*/
+
+    @Get("all")
+    async listarTodosLivros(
+        @Res() notFound: TsoaResponse<400, BasicResponseDto>,
+        @Res() success: TsoaResponse<200, BasicResponseDto>
+    ): Promise<void> {
+        try {
+            const livros: Livro[] = await this.serviceLivro.listarTodasLivros();
+            return success(200, new BasicResponseDto("Livros listados com sucesso!", livros));
+        } catch (error: any) {
+            return notFound(400, new BasicResponseDto(error.message, undefined));
+        }
+    }
+
+}
