# projetoII_biblioteca/src/model/dto/LivroDTO/LivroDto.ts
@@ -1,0 +1,13 @@
+export class LivroDto {
+    id: number;
+    titulo: string;
+    autor: string;
+    categoriaID: number;
+
+    constructor(id?:number, titulo?: string, autor?: string, categoriaID?: number) {
+        this.id = id || 0;
+        this.titulo = titulo || '';
+        this.autor = autor || '';
+        this.categoriaID = categoriaID || 0;
+    }
+}
